Bug 1406027 - Always use the mixer so AudioCallbackDriver can track processed samples. r=padenot

This is unnecessary work but simpler than adding a path to, or refactoring, AudioCallbackDriver::DataCallback.

MozReview-Commit-ID: GLNoBqxEuwz

--HG--
extra : rebase_source : b5ef6b2e1506e68d41b22ad557968d70214fbd9f